tests/fail/loader/loader.vi

mod file; // ok
mod dir; // ok

mod missing; // error
mod ambiguous; // error

